syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__extern_crate__tests__it_matches_extern.snap
---
source: syn-state-machine/src/common_tokens/extern_crate.rs
expression: "crate::parse::<ExternCrate>(::quote::quote! { extern crate hi })"
---
Ok(
    (
        ExternCrate {
            id: Ident(
                hi,
            ),
            as: None,
        },
        0,
    ),
)
