syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__extern_crate__tests__it_matches_extern_as.snap
---
source: syn-state-machine/src/common_tokens/extern_crate.rs
expression: "crate::parse::<ExternCrate>(::quote::quote! { extern crate hi as _ })"
---
Ok(
    (
        ExternCrate {
            id: Ident(
                hi,
            ),
            as: Some(
                Ident(
                    _,
                ),
            ),
        },
        0,
    ),
)
